# analisis-ventas-evaluacion-visualizacion-datos

./: README.md  main.py  pyproject.toml  requirements.txt
data/processed/: Ventas_Transformadas.csv  Ventas_Transformadas.parquet  Ventas_cleaned.csv  Ventas_cleaned.parquet  transformed_data.parquet
data/raw/: Ventas.csv
notebooks/: data_clean.ipynb  data_transformation.ipynb  data_visualization.ipynb  inital_exploration.ipynb
src/etl/: clean_data.py  transform_data.py
src/utils/: const.py  logger.py
src/visualization/: visualization.py
tests/unit/: test_file_integrity.py
