[project]
name = "analisis-ventas"
version = "0.1.0"
description = "Analisis de ventas de productos, con el objetivo de obtener información valiosa para el análisis de mercado."
authors = [
    {name = "Diego Rivera", email = "diego.rivera.estefano@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.0",
    "fastexcel>=0.14.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "mypy>=1.16.0",
]
